--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,6 +1,6 @@
 /* Fonts */
 
-@import url('https://fonts.googleapis.com/css?family=Montserrat:400,800');
+@import url('https://fonts.googleapis.com/css?family=Montserrat:400,600,800');
 @import url('https://fonts.googleapis.com/css?family=Roboto:400,900');
 
 /* Variables */
@@ -11,10 +11,16 @@ $secondaryColor: #24285B;
 $bgColor: #E9E9E9;
 $fontColor: #121616;
 
+
+/* ---------------------------- Whole document ---------------------------- */
+* {
+    margin: 0;
+    font-family: 'Montserrat', sans-serif;
+}
+
 /* ---------------------------- Home ---------------------------- */
 
 .home {
-    font-family: 'Montserrat';
     color: $fontColor;
     height: 100vh;
     width: 100vw;
@@ -39,6 +45,7 @@ $fontColor: #121616;
     &__button {
         display: block;
         font-family: Roboto;
+        font-size: clamp(0.5rem, 5vw, 1rem);
         margin: 0 auto;
         background-color: $primaryColor;
         border-radius: 5px;
@@ -111,6 +118,75 @@ $fontColor: #121616;
             cursor: pointer;
         }
 
+    }
+}
+
+/* ---------------------------- Login ---------------------------- */
+
+.login {
+    background-color: $bgColor;
+    height: 100vh;
+
+    &__header {
+        padding: 1rem;
+        font-size: clamp(1.25rem, 15vw, 1.5rem);
+    }
+
+    &__container {
+        margin-top: 3rem;
+        padding-left: 2rem;
+        padding-right: 2rem;
+    }
+
+    &__title {
+        color: $secondaryColor;
+        text-align: center;
+        font-size: clamp(1rem, 10vw, 1.75rem);
+        margin: 2rem 0 2rem 0;
+    }
+
+    &__formGroup {
+       margin: 3rem 1rem 3rem 1rem;
+    }
+
+    &__formLabel, &__formInput {
+        display: block;
+        width: 100%;
+    }
+
+    &__formLabel {
+        font-weight: 800;
+        margin-bottom: 0.75rem;
+        font-size: clamp(1rem, 10vw, 1rem);
+    }
+
+    &__formInput {
+        border: none;
+        height: 2rem;
+        padding: 5px;
+
+        &:focus {
+            border-bottom: 2px solid $primaryColor;
+        }
+    }
+
+    &__button {
+        @extend .home__button;
+        padding-left: 20px;
+        padding-right: 20px;
+        margin-top: 1.25rem;
+        margin-bottom: 1.25rem;
+        width: 100%;
+    }
+
+    &__signup {
+        text-align: center;
+    }
+
+    &__link {
+        text-decoration: none;
+        color: $secondaryColor;
+        font-weight: 600;
     }
 }
 
