Add styling for task header

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -234,4 +234,22 @@ $fontColor: #121616;
 
 }
 
+/* ---------------------------- Task Header ---------------------------- */
+
+.taskHeader {
+    @extend .homeHeader;
+
+    &__section {
+        @extend .homeHeader__section;
+    }
+
+    &__title {
+        @extend .homeHeader__title;
+    }
+
+    &__exit {
+        @extend .homeHeader__menu;
+    }
+}
+
 
