--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -60,14 +60,14 @@
 }
 
 /* ---------------------------- Home Header ---------------------------- */
-.homeHeader {
+.homeHeader, .taskHeader {
   width: 100vw;
   height: 4rem;
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
 }
 
-.homeHeader__section {
+.homeHeader__section, .taskHeader__section {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -81,13 +81,13 @@
   padding: 0 2rem;
 }
 
-.homeHeader__title {
+.homeHeader__title, .taskHeader__title {
   font-weight: 800;
   color: #24285B;
   font-size: clamp(1rem, 10vw, 1.15rem);
 }
 
-.homeHeader__menu, .homeHeader__close {
+.homeHeader__menu, .taskHeader__exit, .homeHeader__close {
   color: #24285B;
   cursor: pointer;
 }
@@ -188,4 +188,6 @@
 .signUp__login {
   text-align: center;
 }
+
+/* ---------------------------- Task Header ---------------------------- */
 /*# sourceMappingURL=main.css.map */
