--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -2,6 +2,7 @@
 @import url("https://fonts.googleapis.com/css?family=Montserrat:400,600,800");
 @import url("https://fonts.googleapis.com/css?family=Roboto:400,900");
 /* Variables */
+/* Mixins */
 /* ---------------------------- Whole document ---------------------------- */
 * {
   margin: 0;
