--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -286,6 +286,14 @@
   font-size: clamp(1rem, 10vw, 1rem);
 }
 
+.login__formLabel--required::after, .signUp__formLabel--required::after {
+  content: '*';
+  color: #df2323;
+  position: relative;
+  top: -3px;
+  left: 3px;
+}
+
 .login__formInput, .signUp__formInput {
   border: none;
   height: 2rem;
@@ -295,6 +303,10 @@
 .login__formInput:focus, .signUp__formInput:focus {
   border-bottom: 2px solid #0D7A6E;
   outline: none;
+}
+
+.login__formInput:focus:required, .signUp__formInput:focus:required {
+  border: none;
 }
 
 .login__button, .signUp__button {
