--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -268,6 +268,14 @@ $desktop: 1200px;
         font-weight: 800;
         margin-bottom: 0.75rem;
         font-size: clamp(1rem, 10vw, 1rem);
+
+        &--required::after {
+            content: '*';
+            color: #df2323;
+            position: relative;
+            top: -3px;
+            left: 3px;
+        }
     }
 
     &__formInput {
@@ -278,6 +286,10 @@ $desktop: 1200px;
         &:focus {
             border-bottom: 2px solid $primaryColor;
             outline: none;
+
+            &:required {
+                border: none;
+            }
         }
     }
 
@@ -328,6 +340,10 @@ $desktop: 1200px;
 
     &__formLabel {
         @extend .login__formLabel;
+        
+        &--required {
+            @extend .login__formLabel--required;
+        }
     }
 
     &__formInput {
