Move loader component to center

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -519,6 +519,11 @@
 .loader {
   display: inline-block;
   margin: 0 auto;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
 }
 
 .loader span {
