--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -534,6 +534,10 @@ $desktop: 1200px;
 .loader {
     display: inline-block;
     margin: 0 auto;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
 
     span {
         display: inline-block;
